{
    "name": "InputJoueur",
    "maps": [
        {
            "name": "TirLucioles",
            "id": "e1382296-a909-4f6c-9f0b-5d3b33868d00",
            "actions": [
                {
                    "name": "Position Souris",
                    "type": "Value",
                    "id": "29c1b2fd-480f-4583-b489-5e2d3c71ab8e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tir",
                    "type": "Button",
                    "id": "165ca871-36c6-4e5a-ba29-ade70b3fb8b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Annuler Tir",
                    "type": "Button",
                    "id": "4f5f0462-3fb4-47c2-b02b-ecb4d1166a0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangerClavier",
                    "type": "Button",
                    "id": "f824336d-c6af-4e46-a16d-ba8ee54d3a58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangerManette",
                    "type": "Button",
                    "id": "59273020-8d23-417f-8b9a-bd2a9746cb10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position Manette",
                    "type": "Value",
                    "id": "8ab15790-7411-4e0d-8d89-3428995fa581",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9da9772-4f73-40cf-a354-3b3dc063680f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position Souris",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c9cfe16-e1e6-4d7b-800c-be455923cb74",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "Tir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f46c6d7-b0f6-44a2-a21c-cba95f87dc6d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f944f14e-760d-4604-9bb1-4ef979d323ad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier;Keyboard",
                    "action": "Annuler Tir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d63fea5e-c923-463b-b86d-586e04945706",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette;Gamepad",
                    "action": "Annuler Tir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd1b8092-fe78-4dbc-b4c3-f119243622d5",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangerClavier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ef9a41c-2172-4d00-9313-71da4d36a927",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangerManette",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5b3f7aa-7479-47ce-bf61-0fab2ad5fbe6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position Manette",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "29192838-daa3-4fb7-9d7f-5f9ee2ca1685",
            "actions": [
                {
                    "name": "Saut",
                    "type": "Button",
                    "id": "a93f6f19-5f42-4576-8907-c479334a803f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangerManette",
                    "type": "Button",
                    "id": "6a159ab3-d7cb-4ab5-8a75-8bdfa296892d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangerClavier",
                    "type": "Button",
                    "id": "120a735b-b904-4ec2-bfff-e06ae9316316",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouvement",
                    "type": "Value",
                    "id": "6003782c-b8c9-482a-bbfc-bf0cffc0b091",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Courrir",
                    "type": "Button",
                    "id": "c4fe28c2-f638-44c3-b011-1b0e34c54549",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "Accroupir",
                    "type": "Button",
                    "id": "235ef93c-4304-470b-8cf4-7983ce2d7279",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attaque Physique",
                    "type": "Button",
                    "id": "13a79382-c2dc-46d5-b47c-cf73a6f3a1c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "f632c3a4-0877-4b0b-8925-d2b1836056d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enclencher Tir",
                    "type": "Button",
                    "id": "a49a9d94-930b-4743-ad87-a82ff828f806",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d59b10a9-82d7-491e-bf0c-48200980c495",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Saut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe6b1847-4098-4de5-bb3c-d88d0f2d9045",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Saut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard and Mouse",
                    "id": "bd7feb80-526a-41b3-886f-6b5321a6734b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "4fc7c06a-7be2-4ae6-a165-4a6d3ce26044",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "63e04ec2-7453-4778-9e12-d1d27fcbdef5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bf814507-80aa-4c92-8e83-9b0688beda08",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a10ea9e5-0394-4bd0-afbe-9ba86b6ca3a6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "d5a967ed-880e-4b8f-b4c4-cdafc089ee4e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "a19bc375-b1b4-4dda-bd50-25ecb37591ed",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "307fad4b-9677-4b78-b76d-0157b5f4bd55",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1f6165cc-4bda-45b1-a431-1244aeb4f53f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ac228669-2d20-4e11-bb8b-994ec76657a9",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c55a3d39-4bec-4f5c-b7eb-09b497d7b201",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Courrir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1946a964-248d-4de9-bd8c-6036262c1a1c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Courrir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1c12614-8fb1-486c-8fcf-bd489c060e89",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Accroupir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f293f86-3cfc-46a8-af50-270aa705c889",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Accroupir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6587b868-2667-453c-9c52-8f2c585e3a96",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Accroupir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a44de47-9219-45da-bdb0-30164dd8d640",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Attaque Physique",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8388a101-c8da-409e-a189-a260dcf1cf67",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Attaque Physique",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae02edbc-02eb-478b-b1a6-7c509a2ac906",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5132bb4-3a01-47c8-b795-7b94e25b2997",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1c28b2a-139e-462b-99c8-7c7bdbdd5704",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Enclencher Tir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6a5e249-9f84-4ea2-9c9e-6607eec9ef1c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enclencher Tir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "115c7c50-2b94-4725-91b1-4778ab15b135",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangerClavier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05eb7cf0-a733-4dc8-9e68-5ffb094d0ed7",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangerManette",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}